--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">TheProject</string>
 
-    <!-- API strings -->
+    <!-- Config strings -->
     <string name="test_token">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjVjYTM3Y2U3OWRjMmExMjBkNDAyMWNjNiIsImlhdCI6MTU1NDMzMjI1MX0.czaAMZwbLVwRyRxsAkmNYhvvpZdRbTllfdJr3G7mjTc</string>
-    <string name="home_url">https://the-project-yo.herokuapp.com</string>
-    <string name="auth_url">https://the-project-yo.herokuapp.com/auth</string>
-    <string name="users_url">https://the-project-yo.herokuapp.com/users</string>
-    <string name="places_url">https://the-project-yo.herokuapp.com/places</string>
-    <string name="reviews_url">https://the-project-yo.herokuapp.com/reviews</string>
+    <string name="base_url">https://the-project-yo.herokuapp.com/</string>
+    <string name="auth_path">auth/</string>
+    <string name="users_path">users/</string>
+    <string name="places_path">places/</string>
+    <string name="reviews_path">reviews/</string>
+    <string name="date_format">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
 
     <!-- Layout strings -->
     <string name="action_settings">Settings</string>
