--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,22 @@
 <resources>
-    <string name="app_name">TheProject</string>
 
     <!-- Config strings -->
-    <string name="test_token">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjVjYTM3Y2U3OWRjMmExMjBkNDAyMWNjNiIsImlhdCI6MTU1NDMzMjI1MX0.czaAMZwbLVwRyRxsAkmNYhvvpZdRbTllfdJr3G7mjTc</string>
     <string name="base_url">https://the-project-yo.herokuapp.com/</string>
     <string name="auth_path">auth/</string>
     <string name="users_path">users/</string>
     <string name="places_path">places/</string>
     <string name="reviews_path">reviews/</string>
     <string name="date_format">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
+    <string name="test_token">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjVjYTM3Y2U3OWRjMmExMjBkNDAyMWNjNiIsImlhdCI6MTU1NDMzMjI1MX0.czaAMZwbLVwRyRxsAkmNYhvvpZdRbTllfdJr3G7mjTc</string>
+    <string name="admin_id">5ca37ce79dc2a120d4021cc6</string>
+    <string name="admin_name">admin</string>
+    <string name="admin_picture">https://gravatar.com/avatar/4ed0f4923df6c53813fb67919df5b9e1?d=identicon</string>
 
     <!-- Layout strings -->
+    <string name="app_name">TheProject</string>
+    <string name="title_activity_places">Places</string>
+    <string name="title_activity_place">Place</string>
+    <string name="title_activity_add_place">Add Place</string>
+    <string name="title_activity_add_review">Add Review</string>
     <string name="action_settings">Settings</string>
 </resources>
