Refactoring with new API + Handling error responses

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
-
     <!-- Config strings -->
-    <string name="base_url">https://the-project-yo.herokuapp.com/</string>
+    <!--<string name="base_url">http://10.0.2.2:8080/</string>-->
+    <string name="base_url">https://the-project-api.herokuapp.com/</string>
     <string name="auth_path">auth/</string>
     <string name="users_path">users/</string>
     <string name="places_path">places/</string>
     <string name="reviews_path">reviews/</string>
     <string name="date_format">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
-    <string name="test_token">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjVjYTM3Y2U3OWRjMmExMjBkNDAyMWNjNiIsImlhdCI6MTU1NDMzMjI1MX0.czaAMZwbLVwRyRxsAkmNYhvvpZdRbTllfdJr3G7mjTc</string>
-    <string name="admin_id">5ca37ce79dc2a120d4021cc6</string>
+    <string name="test_token">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjVjYzQ3M2QwNWQxYTdjMmNhMDNhYzBkZiIsImV4cCI6MTU2MjUwMzc2OSwiaWF0IjoxNTU3MzE5NzY5fQ.royMRVWKHojHjmlZpPhtl2tEHY0vveIG58wvCrHlBio</string>
+    <string name="admin_id">5cc473d05d1a7c2ca03ac0df</string>
     <string name="admin_name">admin</string>
     <string name="admin_picture">https://gravatar.com/avatar/4ed0f4923df6c53813fb67919df5b9e1?d=identicon</string>
 
