--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,25 @@
     <string name="title_activity_place">Place</string>
     <string name="title_activity_add_place">Add Place</string>
     <string name="title_activity_add_review">Add Review</string>
+
+    <!-- View strings -->
     <string name="action_settings">Settings</string>
+    <string name="search_title">Search</string>
+    <string name="place_name">Place name</string>
+    <string name="place_name_hint">Name of the Place</string>
+    <string name="address">Address</string>
+    <string name="street_address">Street address</string>
+    <string name="street_address_hint">Street address of the Place</string>
+    <string name="postal_code">Postal code</string>
+    <string name="postal_code_hint">Postal code of the Place</string>
+    <string name="city">City</string>
+    <string name="city_hint">City of the Place</string>
+    <string name="tags">Tags</string>
+    <string name="tags_hint">Relevant tags</string>
+    <string name="user">User</string>
+    <string name="rating">Rating</string>
+    <string name="comment">Comment</string>
+    <string name="comment_hint">Your comments on the Place</string>
+    <string name="save">Save</string>
+
 </resources>
