--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,23 +20,26 @@
     <string name="title_activity_add_review">Add Review</string>
 
     <!-- View strings -->
-    <string name="action_settings">Settings</string>
-    <string name="search_title">Search</string>
-    <string name="place_name">Place name</string>
+    <string name="place_name_label">Name:</string>
     <string name="place_name_hint">Name of the Place</string>
-    <string name="address">Address</string>
-    <string name="street_address">Street address</string>
+    <string name="street_address_label">Street line:</string>
     <string name="street_address_hint">Street address of the Place</string>
-    <string name="postal_code">Postal code</string>
+    <string name="postal_code_label">Post. code:</string>
     <string name="postal_code_hint">Postal code of the Place</string>
-    <string name="city">City</string>
+    <string name="city_label">City:</string>
     <string name="city_hint">City of the Place</string>
-    <string name="tags">Tags</string>
+    <string name="tags_label">Tags:</string>
     <string name="tags_hint">Relevant tags</string>
-    <string name="user">User</string>
-    <string name="rating">Rating</string>
-    <string name="comment">Comment</string>
+    <string name="rating_label">Rating:</string>
+    <string name="comment_label">Comment:</string>
     <string name="comment_hint">Your comments on the Place</string>
+
+    <!-- Word strings -->
+    <string name="address">Address</string>
+    <string name="tags">Tags</string>
+    <string name="user">User</string>
     <string name="save">Save</string>
+    <string name="settings">Settings</string>
+    <string name="search">Search</string>
 
 </resources>
